--- a/air.html
+++ b/air.html
@@ -1,158 +1,2 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>Текущи данни</title>
-    <meta name="viewport" content="width=device-width">
-    <style type="text/css">
-        body {
-            font-family: Arial;
-            margin: 0
-        }
-
-        .content {
-            margin: 10px
-        }
-
-        .r {
-            text-align: right
-        }
-
-        td {
-            vertical-align: top;
-        }
-
-        a {
-            text-decoration: none;
-            padding: 10px;
-            background: #3ba;
-            color: white;
-            display: block;
-            width: auto;
-            border-radius: 5px;
-        }
-
-        .wifi {
-            background: none;
-            color: blue;
-            padding: 5px;
-            display: inline;
-        }
-
-        input[type='text'] {
-            width: 100%;
-        }
-
-        input[type='password'] {
-            width: 100%;
-        }
-
-        input[type='submit'] {
-            border-radius: 5px;
-            font-size: medium;
-            padding: 5px;
-        }
-
-        .s_green {
-            padding: 9px !important;
-            width: 100%;
-            border-style: none;
-            background: #3ba;
-            color: white;
-            text-align: left;
-        }
-    </style>
-</head>
-
-<body>
-    <div style="min-height:120px;background-color:#3ba;margin-bottom:20px"><a href="http://127.0.0.1/"
-            style="background:none;display:inline"><img
-                src="images.png"
-                style="float:left;margin:20px" width="100" height="89"></a>
-        <h3 style="margin:0">Сензор за прахови частици</h3><small>ID: 0<br>MAC: 0<br>Софтуер
-            версия: NRZ-2019-127-1</small>
-    </div>
-    <div class="content">
-        <h4>Начало » Текущи данни</h4><b>77 секунди от последното измерване.</b><br><br>
-        <table cellspacing="0" cellpadding="5" border="1">
-            <tbody>
-                <tr>
-                    <th>Сензор</th>
-                    <th> Параметър</th>
-                    <th>Стойност</th>
-                </tr>
-                <tr>
-                    <td colspan="3">&nbsp;</td>
-                </tr>
-                <tr>
-                    <td>SDS011</td>
-                    <td>PM2.5</td>
-                    <td class="r">69.8&nbsp;µg/m³</td>
-                </tr>
-                <tr>
-                    <td>SDS011</td>
-                    <td>PM10</td>
-                    <td class="r">70.1&nbsp;µg/m³</td>
-                </tr>
-                <tr>
-                    <td>SDS011</td>
-                    <td>Софтуер версия</td>
-                    <td class="r">17-08-21(9fff)&nbsp;</td>
-                </tr>
-                <tr>
-                    <td colspan="3">&nbsp;</td>
-                </tr>
-                <tr>
-                    <td>BMP/E280</td>
-                    <td>Температура</td>
-                    <td class="r">23.3&nbsp;°C</td>
-                </tr>
-                <tr>
-                    <td>BMP/E280</td>
-                    <td>Атмосферно налягане</td>
-                    <td class="r">962.83&nbsp;hPa</td>
-                </tr>
-                <tr>
-                    <td>BMP/E280</td>
-                    <td>Влажност на въздуха</td>
-                    <td class="r">57.3&nbsp;%</td>
-                </tr>
-                <tr>
-                    <td colspan="3">&nbsp;</td>
-                </tr>
-                <tr>
-                    <td>WiFi</td>
-                    <td>Сила на сигнала</td>
-                    <td class="r">-65&nbsp;dBm</td>
-                </tr>
-                <tr>
-                    <td>WiFi</td>
-                    <td>Качество на сигнала</td>
-                    <td class="r">70&nbsp;%</td>
-                </tr>
-                <tr>
-                    <td colspan="3">&nbsp;</td>
-                </tr>
-                <tr>
-                    <td colspan="2">Брой измервания</td>
-                    <td class="r">20</td>
-                </tr>
-                <tr>
-                    <td colspan="2">Време, прекарано в изпращане</td>
-                    <td class="r">6723&nbsp;ms</td>
-                </tr>
-                <tr>
-                    <td>Сензор</td>
-                    <td>само грешки</td>
-                    <td class="r">1&nbsp;</td>
-                </tr>
-            </tbody>
-        </table><br><br><a href="http://127.0.0.1/" style="display:inline;">Обратно към начало</a><br><br><br><a
-            href="https://codefor.de/stuttgart/" target="_blank" rel="noreferrer"
-            style="display:inline;background:none;color:black;">© Open Knowledge Lab Stuttgart a.o. (Code for
-            Germany)</a>
-    </div>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><title>Current data</title><meta name='viewport' content='width=device-width'><style type='text/css'>body{font-family:Arial;margin:0}.content{margin:10px}.r{text-align:right}td{vertical-align:top;}a{text-decoration:none;padding:10px;background:#3ba;color:white;display:block;width:auto;border-radius:5px;}.wifi{background:none;color:blue;padding:5px;display:inline;}input[type='text']{width:100%;}input[type='password']{width:100%;}input[type='submit']{border-radius:5px;font-size:medium;padding:5px;}.s_green{padding:9px !important;width:100%;border-style:none;background:#3ba;color:white;text-align:left;}</style></head><body><div style='min-height:120px;background-color:#3ba;margin-bottom:20px'><a href='/' style='background:none;display:inline'><img src='/images?name=luftdaten_logo' style='float:left;margin:20px' width='100' height='89'/></a><h3 style='margin:0'>Particulate matter sensor</h3><small>ID: 0<br/>MAC: 0<br/>Firmware version: 0</small></div><div class='content'><h4>Home &raquo; Current data</h4><b>19 seconds since last measurement.</b><br/><br/><table cellspacing='0' border='1' cellpadding='5'>
+    <tr><th>Sensor</th><th> Parameter</th><th>Value</th></tr><tr><td colspan='3'>&nbsp;</td></tr><tr><td>SDS011</td><td>PM2.5</td><td class='r'>49.4&nbsp;µg/m³</td></tr><tr><td>SDS011</td><td>PM10</td><td class='r'>60.0&nbsp;µg/m³</td></tr><tr><td colspan='3'>&nbsp;</td></tr><tr><td>BMP/E280</td><td>temperature</td><td class='r'>23.3&nbsp;°C</td></tr><tr><td>BMP/E280</td><td>air pressure</td><td class='r'>953.05&nbsp;hPa</td></tr><tr><td>BMP/E280</td><td>humidity</td><td class='r'>48.3&nbsp;%</td></tr><tr><td colspan='3'>&nbsp;</td></tr><tr><td>WiFi</td><td>signal strength</td><td class='r'>-66&nbsp;dBm</td></tr><tr><td>WiFi</td><td>signal quality</td><td class='r'>68&nbsp;%</td></tr><tr><td colspan='3'>&nbsp;</td></tr><tr><td colspan='2'>Number of measurements:</td><td class='r'>53</td></tr><tr><td colspan='2'>Time spent for sending</td><td class='r'>1795&nbsp;ms</td></tr></table><br/><br/><a href='/' style='display:inline;'>Back to home page</a><br/><br/><br/><a href='https://codefor.de/stuttgart/' target='_blank' rel='noreferrer' style='display:inline;background:none;color:black;'>&copy; Open Knowledge Lab Stuttgart a.o. (Code for Germany)</a></div></body></html>
